<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/profileButton"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/filterButton"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchButton"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

</menu>