<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".activities.ProfilePageActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="145dp">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="ContentDescription"
        />

    <Button
        android:id="@+id/button_edit_profile"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="107dp"
        android:text="@string/edit" />



</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

>
        <EditText
            android:id="@+id/email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"

            android:autofillHints=""
            android:hint="@string/email"
            android:textSize="20sp"
            android:inputType="textEmailAddress" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/profile_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/LastName"
            android:inputType="textPersonName"
            android:textSize="20sp"

            />

        <EditText
            android:id="@+id/profile_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/FirstName"
            android:inputType="textPersonName"
            android:textSize="20sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:background="@color/white"
        android:orientation="horizontal">



        <EditText
            android:id="@+id/profile_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/age"
            android:inputType="number"
            android:textSize="20sp" />



        <EditText
            android:id="@+id/profile_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="110dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/genre"
            android:inputType="textPersonName"
            android:textSize="20sp" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:background="@color/white"
        android:orientation="horizontal">



        <EditText
            android:id="@+id/profile_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profile_sciper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/sciper"
            android:inputType="number"
            android:textSize="20sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/info_profile_description"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="20dp"
            android:autofillHints=""
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="10"></EditText>

    </LinearLayout>



</LinearLayout>